# dolphin

./: CMakeLists.txt
.github/workflows/: build.yml  linux.yml
CMake/: FindSteamworksSDK.cmake
Source/: dolphin-emu.sln
Source/Core/: CMakeLists.txt  DolphinLib.props
Source/Core/Common/: ArmCPUDetect.cpp
Source/Core/Core/: Core.cpp  Core.h
Source/Core/Core/HW/: Memmap.cpp  Memmap.h
Source/Core/Core/PowerPC/JitArm64/: Jit.cpp  JitArm64_BackPatch.cpp  JitArm64_RegCache.cpp
Source/Core/DolphinQt/: DolphinEmu.entitlements  Host.cpp  Main.cpp  Updater.cpp  Updater.h
Source/Core/InputCommon/: CMakeLists.txt
Source/Core/InputCommon/ControllerInterface/: ControllerInterface.cpp
Source/Core/SteamHelper/: CMakeLists.txt  HelperServer.cpp  HelperServer.h  Main.cpp  SteamHelper.entitlements  SteamHelper.vcxproj
Source/Core/SteamHelperCommon/: Constants.h  InitResult.h  IpcConnection.cpp  IpcConnection.h  MessageType.h  PipeEnd.cpp  PipeEnd.h  PipeEnd_Unix.cpp  PipeEnd_Windows.cpp
Source/Core/SteamworksCommon/: CMakeLists.txt  RpcConnection.cpp  RpcConnection.h
Source/Core/UICommon/: AutoUpdate.cpp  AutoUpdate.h
Source/Core/UICommon/Steam/: HelperClient.cpp  HelperClient.h  Steam.cpp  Steam.h
Source/Core/VideoBackends/OGL/: Render.cpp
Source/Core/VideoCommon/: RenderBase.cpp
Source/iOS/DolphiniOS/DolphiniOS/: DefaultPreferences.plist
Source/iOS/DolphiniOS/DolphiniOS.xcodeproj/: project.pbxproj
Source/iOS/DolphiniOS/DolphiniOS/Base.lproj/: Main.storyboard
Source/iOS/DolphiniOS/DolphiniOS/UI/Emulation/: Emulation.storyboard  EmulationVIewController.swift  EmulationViewController.mm  EmulationViewController.swift
Source/iOS/DolphiniOS/DolphiniOS/UI/Emulation/InGameSettings/: InGameConfigViewController.swift
Source/iOS/DolphiniOS/DolphiniOS/UI/Emulation/TouchController/: TCButtonType.swift
Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/: DolphinINIParser.swift  IniSettingsTableViewController.h  IniSettingsTableViewController.m  SettingsTableViewController.m
Source/iOS/DolphiniOS/DolphiniOS/UI/SoftwareList/: SoftwareTableViewCell.h  SoftwareTableViewController.mm
